# resourcescope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_1.0.0-process-attribution.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: macos-gpu-helper.md
scripts/macos/: resourcescope-gpu-helper-json.sh  resourcescope-gpu-helper.sh
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gpu.rs  lib.rs  main.rs  metrics.rs
src/components/: CoreGrid.tsx  CpuView.tsx  Dashboard.tsx  DiskView.tsx  GaugeRing.tsx  HealthPanel.tsx  MemoryView.tsx  NetworkCard.tsx  NetworkView.tsx  ProcessTable.tsx  ProcessesView.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  TopBar.tsx  TopProcessesPanel.tsx
src/components/panels/: CpuPanel.tsx  DiskPanel.tsx  GpuPanel.tsx  MemoryPanel.tsx  NetworkPanel.tsx  ProcessesPanel.tsx  SettingsPanel.tsx
src/store/: metricsStore.ts  settingsStore.ts
